--- a/work/css/qeesi.css
+++ b/work/css/qeesi.css
@@ -202,6 +202,10 @@ header nav{
     margin-top: 57px;
 }
 
+:root {
+    --darkgreen: #16906D;
+}
+
 
 
 
@@ -217,6 +221,9 @@ header nav{
 
    
 }
+
+
+
 
  p
 
@@ -239,6 +246,22 @@ header nav{
     font-size: 17px;
     margin-top: 3%;
 }
+
+
+.highlighted {
+    color: var(--darkgreen);
+}
+
+
+.preview-text {
+
+    font-size: 25px;
+    font-weight: 700;
+    margin-top: 10%;
+    margin-left: 30%;
+
+}
+
 
  
 
